# norish

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  check-users.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-notes-v0.18.0-beta.md  release_notes.md  turbo.json
.claude/: gsd-file-manifest.json  gsd-install-state.json
.claude/agents/: gsd-advisor-researcher.md  gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-roadmapper.md  (+4 more)
.planning/: PROJECT.md  REMOTE-SESSION-WORKFLOW.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  VERIFICATION.md  config.json
.sisyphus/: boulder.json
__tests__/: helpers.test.ts
apps/parser-api/: package.json  pyproject.toml
components/: timer-dock.tsx
config/: content-indicators.default.json  server-config-loader.ts  units.default.json
context/: recipes-context.tsx
design_docs/: timer_feature.md
docker/: Dockerfile  beta.env.example  compose.base.yaml  compose.local.yaml  docker-compose.beta.yml  docker-compose.example.yml  docker-compose.test.yml
hooks/: auto-hide.tsx  use-notification-permission.ts  use-unit-formatter.ts
lib/: grocery-grouping.ts  helpers.ts  timer-parser.test.ts  timer-parser.ts  unit-localization.ts
openspec/: config.yaml  project.md
scripts/: analyze-timers.ts
server/: downloader.ts
stores/: timers.test.ts  timers.ts
types/: index.ts
(+1083 files in other folders)
